<resources>
    <string name="app_name">Ease Services</string>
    <string name="select_anyone_option_from_below">Select anyone option from Below :</string>
    <string name="mechanic">Mechanic</string>
    <string name="operator">Operator</string>
    <string name="operator_interface">Operator Interface</string>
    <string name="line_no">Line No</string>
    <string name="mechanic_interface">Mechanic Interface</string>
    <string name="card_no">Card No</string>
    <string name="submit">Inform Mechanic</string>
    <string name="button">Click here to View Data</string>
</resources>
